# bobrain

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  log.md  pyproject.toml
.agents/director/: anti_patterns.md  philosophy_os.md  qdaif_axes.yaml  vision.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.launch-drafts/: README-disclosure-draft.md  awesome-mcp-pr-final.md  awesome-mcp-targets.md  dr-showhn-runtime-ops-2026-05-01.md  footer-signature-draft.md  readme-performance-draft-v2.md  readme-performance-draft.md  reddit-localllama.md  reddit-obsidianmd.md  show-hn-draft.md  show-hn-final.md
assets/: og.html
docs/: index.html
docs/launch/: localllama.md  obsidianmd.md  showhn.md
docs/proposals/: pro-setup-wizard.md
docs/research/: competitive-analysis-2026-W18.md  measure-context-savings.py  showhn-strategy-2026-04-29.md
sample/: indie_hackers_tips.md  lancedb_notes.md  mcp_basics.md  obsidian_workflow.md  python_intro.md  rag_overview.md
src/bobrain/: __init__.py  cli.py  indexer.py  search.py  server.py  stats.py  watcher.py
src/mybrain_mcp/: __init__.py  cli.py  indexer.py  search.py  server.py  watcher.py
tests/: test_indexer.py  test_mcp_client.py  test_stats.py  test_tokenize.py  test_watch.py
